# pid-unfolding

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json
include/: Plant.hpp  SignalPt.hpp  control-frp.hpp  pid.hpp
include/plotting/: plot-helpers.hpp
include/util/: util-frp.hpp  util-sim.hpp  util.hpp
lib/: Plant.hpp  control-frp.hpp  pid.hpp
src/: CMakeLists.txt  pid-RxCpp.cpp  pid-frp.cpp  pid-range-v3.cpp  pid-unfold.cpp
src/calculations/: analytical_solutions.cpp  test_A_p00.m  test_A_p00.wxmx  test_B_p0d.m  test_B_p0d.wxmx  test_C_pi0.m  test_C_pi0.wxmx  test_D_pid.m  test_D_pid.wxmx
test/: CMakeLists.txt  Plant.hpp  plot-helpers.hpp  test-util.hpp  test_2_p0d.wxmx  utest-logic-frp.cpp  utest-numerics-Plant.cpp  utest-numerics-pid_algebra.cpp  utest-pid-frp.cpp  utest-pid-simple.cpp  utest-pid-simulations.cpp  utest-unfold.cpp  util.hpp
test/calculations/: analytical_solutions.cpp  test_1_p00.m  test_1_p00.wxmx  test_B_p0d.wxmx  test_C_pi0.m  test_C_pi0.wxmx
